##*****************************************************************************
## $Id: Makefile.am,v 1.18 2005-05-11 23:47:18 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

if !WITH_STATIC_MODULES
DYNAMIC_MODULES_MANPAGES = cerebro_module_devel.3
endif

man1_MANS  = cerebro.1

man3_MANS  = libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_strerror.3 \
	     cerebro_errormsg.3 \
	     cerebro_perror.3 \
	     cerebro_nodes_iterator_next.3 \
	     cerebro_nodes_iterator_reset.3 \
	     cerebro_nodes_iterator_destroy.3 \
	     cerebro_updown_load_data.3 \
	     cerebro_updown_unload_data.3 \
	     cerebro_updown_get_up_nodes.3 \
	     cerebro_updown_get_down_nodes.3 \
	     cerebro_updown_up_nodes_iterator.3 \
	     cerebro_updown_down_nodes_iterator.3 \
	     cerebro_updown_is_node_up.3 \
	     cerebro_updown_is_node_down.3 \
	     cerebro_updown_up_count.3 \
	     cerebro_updown_down_count.3 \
	     cerebro_module.3 \
	     $(DYNAMIC_MODULES_MANPAGES)

man5_MANS  = cerebro.conf.5
 
man8_MANS  = cerebrod.8

EXTRA_DIST = cerebro.1 \
	     libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_strerror.3 \
	     cerebro_errormsg.3 \
	     cerebro_perror.3 \
	     cerebro_nodes_iterator_next.3 \
	     cerebro_nodes_iterator_reset.3 \
	     cerebro_nodes_iterator_destroy.3 \
	     cerebro_updown_load_data.3 \
	     cerebro_updown_unload_data.3 \
	     cerebro_updown_get_up_nodes.3 \
	     cerebro_updown_get_down_nodes.3 \
	     cerebro_updown_up_nodes_iterator.3 \
	     cerebro_updown_down_nodes_iterator.3 \
	     cerebro_updown_is_node_up.3 \
	     cerebro_updown_is_node_down.3 \
	     cerebro_updown_up_count.3 \
	     cerebro_updown_down_count.3 \
	     cerebro_module.3 \
	     $(DYNAMIC_MODULES_MANPAGES) \
	     cerebro.conf.5 \
	     cerebrod.8
