##*****************************************************************************
## $Id: Makefile.am,v 1.24 2005-06-28 20:58:32 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DYNAMIC_MODULES_MANPAGES = cerebro_module_devel.3

man1_MANS  = cerebro.1

man3_MANS  = libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_nodelist_errnum.3 \
	     cerebro_nodelist_iterator_errnum.3 \
	     cerebro_strerror.3 \
             cerebro_get_hostname.3 \
             cerebro_set_hostname.3 \
	     cerebro_get_port.3 \
	     cerebro_set_port.3 \
	     cerebro_get_timeout_len.3 \
	     cerebro_set_timeout_len.3 \
	     cerebro_get_flags.3 \
	     cerebro_set_flags.3 \
	     cerebro_get_metric_data.3 \
	     cerebro_nodelist_metric_name.3 \
	     cerebro_nodelist_length.3 \
	     cerebro_nodelist_destroy.3 \
	     cerebro_nodelist_iterator_create.3 \
	     cerebro_nodelist_iterator_next.3 \
	     cerebro_nodelist_iterator_reset.3 \
	     cerebro_nodelist_iterator_at_end.3 \
	     cerebro_nodelist_iterator_nodename.3 \
	     cerebro_nodelist_iterator_metric_value.3 \
	     cerebro_nodelist_iterator_destroy.3 \
	     cerebro_module.3 \
	     $(DYNAMIC_MODULES_MANPAGES)

man5_MANS  = cerebro.conf.5
 
man8_MANS  = cerebrod.8

EXTRA_DIST = cerebro.1 \
	     libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_nodelist_errnum.3 \
	     cerebro_nodelist_iterator_errnum.3 \
	     cerebro_strerror.3 \
             cerebro_get_hostname.3 \
             cerebro_set_hostname.3 \
	     cerebro_get_port.3 \
	     cerebro_set_port.3 \
	     cerebro_get_timeout_len.3 \
	     cerebro_set_timeout_len.3 \
	     cerebro_get_flags.3 \
	     cerebro_set_flags.3 \
	     cerebro_get_metric_data.3 \
	     cerebro_nodelist_metric_name.3 \
	     cerebro_nodelist_length.3 \
	     cerebro_nodelist_destroy.3 \
	     cerebro_nodelist_iterator_create.3 \
	     cerebro_nodelist_iterator_next.3 \
	     cerebro_nodelist_iterator_reset.3 \
	     cerebro_nodelist_iterator_at_end.3 \
	     cerebro_nodelist_iterator_nodename.3 \
	     cerebro_nodelist_iterator_metric_value.3 \
	     cerebro_nodelist_iterator_destroy.3 \
	     cerebro_module.3 \
	     $(DYNAMIC_MODULES_MANPAGES) \
	     cerebro.conf.5 \
	     cerebrod.8
