##*****************************************************************************
## $Id: Makefile.am,v 1.30 2005-07-22 21:46:54 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

man3_MANS  = libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_metriclist_errnum.3 \
	     cerebro_metriclist_iterator_errnum.3 \
	     cerebro_nodelist_errnum.3 \
	     cerebro_nodelist_iterator_errnum.3 \
	     cerebro_strerror.3 \
             cerebro_get_hostname.3 \
             cerebro_set_hostname.3 \
	     cerebro_get_port.3 \
	     cerebro_set_port.3 \
	     cerebro_get_timeout_len.3 \
	     cerebro_set_timeout_len.3 \
	     cerebro_get_flags.3 \
	     cerebro_set_flags.3 \
	     cerebro_get_metric_names.3 \
	     cerebro_get_metric_data.3 \
	     cerebro_register_metric.3 \
	     cerebro_unregister_metric.3 \
	     cerebro_update_metric_value.3 \
	     cerebro_resend_metric.3 \
	     cerebro_metriclist_length.3 \
	     cerebro_metriclist_destroy.3 \
	     cerebro_metriclist_iterator_create.3 \
	     cerebro_metriclist_iterator_next.3 \
	     cerebro_metriclist_iterator_reset.3 \
	     cerebro_metriclist_iterator_at_end.3 \
	     cerebro_metriclist_iterator_metric_name.3 \
	     cerebro_metriclist_iterator_destroy.3 \
	     cerebro_nodelist_metric_name.3 \
	     cerebro_nodelist_length.3 \
	     cerebro_nodelist_destroy.3 \
	     cerebro_nodelist_iterator_create.3 \
	     cerebro_nodelist_iterator_next.3 \
	     cerebro_nodelist_iterator_reset.3 \
	     cerebro_nodelist_iterator_at_end.3 \
	     cerebro_nodelist_iterator_nodename.3 \
	     cerebro_nodelist_iterator_metric_value.3 \
	     cerebro_nodelist_iterator_destroy.3 \
	     cerebro_module.3 \
	     cerebro_module_devel.3

man5_MANS  = cerebro.conf.5
 
man8_MANS  = cerebro-admin.8 \
	     cerebro-stat.8 \
	     cerebrod.8

EXTRA_DIST = cerebro.1 \
	     libcerebro.3 \
	     cerebro.3 \
	     cerebro_handle_create.3 \
	     cerebro_handle_destroy.3 \
	     cerebro_errnum.3 \
	     cerebro_metriclist_errnum.3 \
	     cerebro_metriclist_iterator_errnum.3 \
	     cerebro_nodelist_errnum.3 \
	     cerebro_nodelist_iterator_errnum.3 \
	     cerebro_strerror.3 \
             cerebro_get_hostname.3 \
             cerebro_set_hostname.3 \
	     cerebro_get_port.3 \
	     cerebro_set_port.3 \
	     cerebro_get_timeout_len.3 \
	     cerebro_set_timeout_len.3 \
	     cerebro_get_flags.3 \
	     cerebro_set_flags.3 \
	     cerebro_get_metric_names.3 \
	     cerebro_get_metric_data.3 \
	     cerebro_register_metric.3 \
	     cerebro_unregister_metric.3 \
	     cerebro_update_metric_value.3 \
	     cerebro_resend_metric.3 \
	     cerebro_metriclist_length.3 \
	     cerebro_metriclist_destroy.3 \
	     cerebro_metriclist_iterator_create.3 \
	     cerebro_metriclist_iterator_next.3 \
	     cerebro_metriclist_iterator_reset.3 \
	     cerebro_metriclist_iterator_at_end.3 \
	     cerebro_metriclist_iterator_metric_name.3 \
	     cerebro_metriclist_iterator_destroy.3 \
	     cerebro_nodelist_metric_name.3 \
	     cerebro_nodelist_length.3 \
	     cerebro_nodelist_destroy.3 \
	     cerebro_nodelist_iterator_create.3 \
	     cerebro_nodelist_iterator_next.3 \
	     cerebro_nodelist_iterator_reset.3 \
	     cerebro_nodelist_iterator_at_end.3 \
	     cerebro_nodelist_iterator_nodename.3 \
	     cerebro_nodelist_iterator_metric_value.3 \
	     cerebro_nodelist_iterator_destroy.3 \
	     cerebro_module.3 \
	     cerebro_module_devel.3 \
	     cerebro.conf.5 \
	     cerebrod.8
