##*****************************************************************************
## $Id: Makefile.am,v 1.6 2005-06-16 15:45:32 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = cerebrod \
	  modules \
	  libcommon \
	  libcerebro
