##*****************************************************************************
## $Id: Makefile.am,v 1.8 2005-07-05 19:55:25 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = cerebro-stat \
	  cerebrod \
	  libs \
	  modules
