##*****************************************************************************
## $Id: Makefile.am,v 1.9 2005-07-20 21:51:46 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = cerebro-admin \
	  cerebro-stat \
	  cerebrod \
	  libs \
	  modules
